fixing hero2 overflow

--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -49,6 +49,10 @@ $global-font-family:  'Source Sans Pro', sans-serif
 #hero2
     background: url("https://res.cloudinary.com/dofqonp6x/image/upload/v1596561179/ceedteck-website/hero_e7iq5b.jpg")
 
+#hero2 > div
+    height: 100vh
+    overflow: hidden!important
+
 #services 
     .uk-card-default
         background: rgba(255,255,255,1)!important
